# last-location

./: .build.yml  .env  Cargo.toml  README.md  Rocket.toml  list
ci/: build-doc.sh  build.sh  test.sh
migrations/2024-03-22-201847_create_pilot/: down.sql  up.sql
migrations/2024-03-22-211945_create_info/: down.sql  up.sql
resources/tests/: add_to_logs_secure.json  expire.json  expire_clear_2.json  expire_crypt_1.json  expire_logs_1.json
src/: apitypes.rs  db.rs  json.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs
src/responders/: api_errors.rs
static/: index.html  lib.js  new.html  style.css
tests/: lastloc.rs
