[package]
name = "last-position"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["sqlite", "time", "uuid", "serde_json", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
#rocket = { version = "0.5.0", features = ["json"] }
time = { version = "0.3", features = ["serde"] }
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.2", features = ["client"] }

rand = "0.8.5"
clap = "4.5.4"
hex = "0.4.3"
aes-gcm = "0.10.3"
hex-literal = "0.4.1"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "multipart", "stream"] }
word_generator = "0.1.1"
predicates = { version = "3.1.2", features = ["regex"] }
thiserror = "1.0.63"

[dev-dependencies]
assert_cmd = "2.0.14"
axum-test = "14.8.0"
